# Wifi_Positioning

./: CMakeLists.txt  LICENSE  README.md
Config/: NamesOfAP.txt  PositionOfAP.txt
cmake_modules/: FindMLPACK.cmake
data/: README.md  wifi_database.csv  wifi_database_pos.csv  wifi_testdata1.csv  wifi_testdata2.csv  wifi_testdata3.csv
data/wifi_basedata/: 1-01  1-02  1-03  1-04  1-05  1-06  1-07  1-08  1-09  1-10  1-11  1-12  1-13  1-14  1-15  1-16  1-17  1-18  1-19  1-20  1-21  1-22  1-23  1-24  1-25  1-26  1-27  1-28  1-29  1-30  1-31  1-32  1-33  1-34  1-35  1-36  1-37  1-38  1-39  1-40  (+85 more)
data/wifi_basedata_old/: 1-01  1-02  1-03  1-04  1-05  1-06  1-07  1-08  1-09  1-10  1-11  1-12  1-13  1-14  1-15  1-16  1-17  1-18  1-19  1-20  1-21  1-22  1-23  1-24  1-25  1-26  1-27  1-28  1-29  1-30  1-31  1-32  1-33  1-34  1-35  1-36  1-37  1-38  1-39  2-01  (+67 more)
include/: datasetPrepare.h  estimatePosition.h  knn.h  testdataPrepare.h  wknn.h
include/wifipos/: common_include.h  strategy.h  utils.h  visualizing.h  wifiposition.h
src/: CMakeLists.txt  datasetPrepare.cpp  estimatePosition.cpp  knn.cpp  strategy.cpp  testdataPrepare.cpp  utils.cpp  visualizing.cpp  wifiposition.cpp  wknn.cpp
test/: CMakeLists.txt  KNN_example.cpp  test.cpp  wifiPositioning.cpp
